; ModuleID = '/home/carl/AnghaBench/linux/drivers/firmware/extr_arm_scpi.c_scpi_device_set_power_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/firmware/extr_arm_scpi.c_scpi_device_set_power_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dev_pstate_set = type { i32, i32 }

@CMD_SET_DEVICE_PWR_STATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @scpi_device_set_power_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scpi_device_set_power_state(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.dev_pstate_set, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds %struct.dev_pstate_set, %struct.dev_pstate_set* %6, i32 0, i32 0
  %8 = load i32, i32* %4, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds %struct.dev_pstate_set, %struct.dev_pstate_set* %6, i32 0, i32 1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @cpu_to_le16(i32 %10)
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* @CMD_SET_DEVICE_PWR_STATE, align 4
  %13 = call i32 @scpi_send_message(i32 %12, %struct.dev_pstate_set* %6, i32 8, i32* %5, i32 4)
  ret i32 %13
}

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @scpi_send_message(i32, %struct.dev_pstate_set*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
